1. 配置maven的编译javac为12版本 2. finalize方法过时的警告抑制